# HomeWorkWEB_7

./: argparses.py  config.ini  main.py  my_select.py  parse.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 395b481faf45_init.py  cc502bb75630_init.py
conf/: db.py  models.py
