[tool.poetry]
name = "web7"
version = "0.1.0"
description = ""
authors = ["IVadymMarchenko <topim31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
asyncio = "^3.4.3"
faker = "^23.1.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
